# hantek_drc

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  hantek_drc-config.cmake.in  install.py  install.sh
examples/csv/: CMakeLists.txt  main.c
examples/gnuplot/: CMakeLists.txt  main.c
include/hantek_drc/: channel.h  coupling.h  fwd.h  gnuplot.h  info.h  mem.h  read.h  value.h
samples/channels/: 1_ch.0.drc  2_ch.0.drc  2_ch_1_3.0.drc  2_ch_1_3_zero_lever_1st_ch.0.drc  2_ch_2_4.0.drc  3_ch.0.drc  4_ch.0.drc  4_chdata_trigger_bottom.0.drc
samples/coupling/: 1ch_ac.0.drc  1ch_dc.0.drc  1ch_gnd.0.drc
samples/data/: ch_1_2_3_timediv_100us_vdiv_2v_data_4_1v_data_0v_data_2_4v.0.drc  ch_1_2_3_timediv_100us_vdiv_2v_low_samples_data_4_1v_data_0v_data_2_4v.0.drc  ch_1_3_timediv_100us_vdiv_2v_data_4_1v.0.drc  ch_1_3_timediv_100us_vdiv_2v_data_4_1v_data_2_4v.0.drc  ch_1_3_timediv_1s_vdiv_2v_data_4_1v.0.drc  ch_1_timediv_100ms_vdiv_500mv_triangle_10hz.0.drc  ch_1_timediv_1ms_vdiv_1v_triangle_10hz_no_clamp.0.drc  ch_1_timediv_1ms_vdiv_500mv_triangle_10hz.0.drc  ch_1_timediv_1s_vdiv_1v_negative_limit_data_4_1v.0.drc  ch_1_timediv_1s_vdiv_1v_positive_limit_data_4_1v.0.drc  ch_1_timediv_1s_vdiv_500mv_negative_limit_data_4_1v.0.drc  ch_1_timediv_1s_vdiv_500mv_positive_limit_data_4_1v.0.drc  ch_1_timediv_1s_vdiv_500mv_triangle_10hz.0.drc  ch_1_timediv_1us_vdiv_1v_triangle_10hz_no_clamp.0.drc  ch_1_timediv_20ms_vdiv_500mv_triangle_full_scale.0.drc  test.0.drc
samples/lever/: -1div.0.drc  -2div.0.drc  -3div.0.drc  -4div.0.drc  0div.0.drc  1div.0.drc  2div.0.drc  3div.0.drc  4div.0.drc
samples/motor_2ch/: motor_2ch.0.drc
samples/multiplier/: x1.0.drc  x10.0.drc  x100.0.drc  x1000.0.drc
samples/strings/: string1.0.drc  string2.0.drc  string3.0.drc  string4.0.drc  string5.0.drc  string6.0.drc
samples/timediv/: 1_ch_1000s_1v.0.drc  1_ch_100ms_1v.0.drc  1_ch_100ns_1v.0.drc  1_ch_100s_1v.0.drc  1_ch_100us_1v.0.drc  1_ch_10ms_1v.0.drc  1_ch_10ns_1v.0.drc  1_ch_10s_1v.0.drc  1_ch_10us_1v.0.drc  1_ch_1ms_1v.0.drc  1_ch_1s_1v.0.drc  1_ch_1us_1v.0.drc  1_ch_200ms_1v.0.drc  1_ch_200ns_1v.0.drc  1_ch_200s_1v.0.drc  1_ch_200us_1v.0.drc  1_ch_20ms_1v.0.drc  1_ch_20ns_1v.0.drc  1_ch_20s_1v.0.drc  1_ch_20us_1v.0.drc  1_ch_2ms_1v.0.drc  1_ch_2ns_1v.0.drc  1_ch_2s_1v.0.drc  1_ch_2us_1v.0.drc  1_ch_500ms_1v.0.drc  1_ch_500ns_1v.0.drc  1_ch_500s_1v.0.drc  1_ch_500us_1v.0.drc  1_ch_50ms_1v.0.drc  1_ch_50ns_1v.0.drc  1_ch_50s_1v.0.drc  1_ch_50us_1v.0.drc  1_ch_5ms_1v.0.drc  1_ch_5ns_1v.0.drc  1_ch_5s_1v.0.drc  1_ch_5us_1v.0.drc
samples/trig_source/: ch1.0.drc  ch2.0.drc  ch3.0.drc  ch4.0.drc
src/: binary.hpp  caps.c  caps.cpp  caps.h  caps.hpp  channel.c  channel.cpp  channel.h  channel.hpp  coupling.h  coupling.hpp  csv.c  csv.h  data.c  data.h  datatype.h  drc.hpp  file.c  file.cpp  file.h  file.hpp  filter.c  filter.h  format.c  format.h  frame_handler.c  frame_handler.h  gnuplot.c  handler.c  handler.h  info.c  info.cpp  info.h  info.hpp  mem.c  mem.h  pow.hpp  range.c  range.h  read.c  (+5 more)
test/: caps.cpp  csv.c  csv.h  drc.cpp  file.c  file.cpp  file.h  info.cpp  main.c  mem.c  mem.h  pow.cpp  range.c  range.h  read.c  read.h  reader.cpp  value.c  value.cpp  value.h
